test/language/spec/pipeline/valid/multi_return_pipeline.topo
// Pipeline with multi-return functions

using int = std::cpp17::int;
using bool = std::cpp17::bool;

namespace proc {
  public:
    void run();
    fn run {
      fetch -> decode;
      decode -> execute;
      execute -> void;
    }

  protected:
    fetch() -> (int opcode, int operand);
    decode(int opcode, int operand) -> (bool valid, int result);
    execute(bool valid, int result) -> (int output, bool success);
}
